objects/autoRabitObject__c.object
<CustomObject>
    <fields>
        <fullName>aR_ID__c</fullName>
        <label>aR_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>aR_Name__c</fullName>
        <label>aR_Name</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueNo__c</fullName>
        <externalId>true</externalId>
        <label>uniqueNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>autoRabitObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>autoRabitObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>autoRabitObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>